k8saddon/monitoring/alertmanager.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    prometheus.io/scrape: 'true'
    prometheus.io/path: '/metrics'
  labels:
    name: alertmanager
  name: alertmanager
  namespace: monitoring
spec:
  selector:
    app: alertmanager
  type: NodePort
  ports:
  - name: alertmanager
    protocol: TCP
    port: 9093
    targetPort: 9093
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: alertmanager
  namespace: monitoring
spec:
  replicas: 3
  serviceName: alertmanager
  selector:
    matchLabels:
      app: alertmanager
  template:
    metadata:
      labels:
        app: alertmanager
    spec:
      # Comment the following tolerations if must not be deployed on master
      tolerations:
        - key: node-role.kubernetes.io/master
          effect: NoSchedule
      containers:
      - name: alertmanager
        image: prom/alertmanager:v0.19.0
        command: ["sh"]
        args:
          - '-c'
          - >
            sleep 10 && /bin/alertmanager --config.file=/etc/alertmanager/config.yml 
            --storage.path=/alertmanager --cluster.listen-address=${MY_POD_IP}:9094 
            --cluster.peer=alertmanager-0.alertmanager:9094
            --cluster.peer=alertmanager-1.alertmanager:9094
            --cluster.peer=alertmanager-2.alertmanager:9094
            --web.route-prefix=alertmanager
        ports:
        - name: alertmanager
          containerPort: 9093
        - name: cluster
          containerPort: 9094
        volumeMounts:
        - name: config-volume
          mountPath: /etc/alertmanager
        - name: templates-volume
          mountPath: /etc/alertmanager/templates
        - name: alertmanager
          mountPath: /alertmanager
      volumes:
      - name: config-volume
        configMap:
          name: alertmanager
      - name: templates-volume
        configMap:
          name: alertmanager-templates
      - name: alertmanager
        emptyDir: {}
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: alertmanager
  namespace: monitoring
  annotations:
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: monitoringauth
    nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required - Monitoring'
spec:
  tls:
    - hosts:
        - busterkeen.francecentral.cloudapp.azure.com
      secretName: monitoring-certificate
  rules:
    - host: busterkeen.francecentral.cloudapp.azure.com
      http:
        paths:
          - path: /alertmanager
            backend:
              serviceName: alertmanager
              servicePort: 9093
